--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,15 +20,15 @@ jobs:
 
       - name: Restore Dependencies
         run: dotnet restore
-        working-directory: CarLot-Manager.API
+        working-directory: .
 
       - name: Build
         run: dotnet build --no-restore
-        working-directory: CarLot-Manager.API
+        working-directory: .
 
       - name: Run Tests
         run: dotnet test --no-build --verbosity normal
-        working-directory: CarLot-Manager.Tests
+        working-directory: .
 
   docker_build_push:
     runs-on: ubuntu-latest
@@ -44,7 +44,7 @@ jobs:
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carlot-manager:latest -f CarLot-Manager.API/Dockerfile CarLot-Manager.API
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carlot-manager:latest .
 
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKER_USERNAME }}/carlot-manager:latest
