--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -16,14 +16,14 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/carlot-manager:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/carlot-manager:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest
 
   terraform:
     name: Deploy Infrastructure (Terraform)
@@ -45,9 +45,10 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_KEY }}
-          aws-region: eu-central-1
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+          aws-region: us-east-1
 
       - name: Terraform Init
         run: terraform init
@@ -96,6 +97,7 @@ jobs:
           URL=$(cat deployment_url.txt)
           echo "Checking health at: $URL"
           
+          # Retry until healthy or fail after timeout
           for i in {1..10}; do
             STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$URL")
             
