--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,11 +59,11 @@ jobs:
       - name: Terraform Apply
         run: terraform apply -auto-approve tfplan
 
-      - name: Output ALB DNS
+      - name: Output ALB DNS safely
         id: infra
         run: |
-          # שולל debug/info
-          alb_dns=$(terraform output -raw alb_dns_name 2>/dev/null)
+          # שימוש ב-json ו-jq כדי למנוע debug info
+          alb_dns=$(terraform output -json alb_dns_name | jq -r '.')
           echo "alb_dns=$alb_dns" >> $GITHUB_OUTPUT
           echo "ALB DNS: $alb_dns"
 
@@ -76,9 +76,9 @@ jobs:
         run: |
           URL=${{ needs.terraform.outputs.alb_dns }}
           # Resolve DNS ל-IP ציבורי
-          alb_ip=$(getent ahosts $URL | awk '{ print $1; exit }')
-          echo "alb_ip=$alb_ip"
+          alb_ip=$(getent ahosts $URL | awk '{print $1; exit}')
           echo "alb_ip=$alb_ip" >> $GITHUB_OUTPUT
+          echo "ALB Public IP: $alb_ip"
 
   notify:
     needs: [terraform, resolve_ip]
