--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -59,29 +59,19 @@ jobs:
         with:
           terraform_version: 1.5.7
 
-      - name: Ensure backend-config is present
-        run: |
-          echo "bucket=${{ secrets.TF_STATE_S3_BUCKET }}" > backend.tfvars
-          echo "key=${{ secrets.TF_STATE_S3_KEY }}" >> backend.tfvars
-          echo "region=${{ env.AWS_REGION }}" >> backend.tfvars
-          echo "dynamodb_table=${{ secrets.TF_STATE_DDB_TABLE }}" >> backend.tfvars
-
-      - name: Terraform Init (with backend)
-        run: |
-          terraform init -input=false -no-color -backend-config=backend.tfvars
+      - name: Terraform Init
+        run: terraform init -input=false -no-color
 
       - name: Terraform Validate
         run: terraform validate -no-color
 
       - name: Terraform Plan
         id: plan
-        run: |
-          terraform plan -out=tfplan -input=false -no-color
+        run: terraform plan -out=tfplan -input=false -no-color
 
       - name: Terraform Apply
         id: apply
-        run: |
-          terraform apply -input=false -auto-approve -no-color tfplan
+        run: terraform apply -input=false -auto-approve -no-color tfplan
 
       - name: Output ALB DNS
         id: infra
@@ -108,7 +98,8 @@ jobs:
           URL=${{ needs.terraform.outputs.alb_dns }}
           HOST=$(echo "$URL" | sed -E 's~https?://~~')
 
-          for i in {1..12}; do
+          echo "Waiting for ALB DNS to be ready..."
+          for i in {1..20}; do
             alb_ip=$(getent ahosts "$HOST" | awk '{print $1; exit}' || true)
             if [ -n "$alb_ip" ]; then
               echo "alb_ip=$alb_ip" >> $GITHUB_OUTPUT
@@ -116,7 +107,7 @@ jobs:
               exit 0
             fi
             echo "DNS not ready yet, retrying... ($i)"
-            sleep 10
+            sleep 15
           done
 
           echo "ERROR: Could not resolve ALB public IP for $HOST"
