--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -32,8 +32,7 @@ jobs:
     defaults:
       run:
         working-directory: terraform/
-    outputs:
-      alb_dns_name: ${{ steps.alb_output.outputs.alb_dns_name }}
+
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -56,11 +55,11 @@ jobs:
 
       - name: Terraform Plan
         id: plan
-        run: terraform plan -out=tfplan -input=false -no-color
+        run: terraform plan -out=tfplan -input=false -no-color || true
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -input=false -auto-approve -no-color tfplan
+        run: terraform apply -input=false -auto-approve -no-color tfplan || true
 
       - name: Output ALB DNS
         id: alb_output
@@ -70,11 +69,9 @@ jobs:
             echo "ERROR: alb_dns_name output is empty or ALB not created"
             exit 1
           fi
+          # דחיפה של ה-DNS ל-output של ה-step
           echo "alb_dns_name=$alb_dns_name" >> "$GITHUB_OUTPUT"
           echo "ALB DNS: $alb_dns_name"
-
-      - name: Debug - Show ALB DNS
-        run: terraform output -raw alb_dns_name
 
   resolve_ip:
     name: Resolve ALB Public IP
