--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -64,13 +64,13 @@ jobs:
       - name: Output ALB DNS
         id: alb_output
         run: |
-          alb_dns=$(terraform output -raw alb_dns_name 2>/dev/null | tr -d '\r\n')
-          if [ -z "$alb_dns" ]; then
+          alb_dns_name=$(terraform output -raw alb_dns_name 2>/dev/null | tr -d '\r\n')
+          if [ -z "$alb_dns_name" ]; then
             echo "ERROR: alb_dns_name output is empty or ALB not created"
             exit 1
           fi
-          echo "alb_dns=$alb_dns" >> "$GITHUB_OUTPUT"
-          echo "ALB DNS: $alb_dns"
+          echo "alb_dns_name=$alb_dns_name" >> "$GITHUB_OUTPUT"
+          echo "ALB DNS: $alb_dns_name"
 
   resolve_ip:
     name: Resolve ALB Public IP
@@ -79,7 +79,7 @@ jobs:
     steps:
       - name: Resolve ALB IP
         run: |
-          ALB_DNS=${{ needs.terraform.outputs.alb_dns }}
+          ALB_DNS=${{ needs.terraform.outputs.alb_dns_name }}
           if [ -z "$ALB_DNS" ]; then
             echo "ERROR: ALB DNS is empty, skipping resolve"
             exit 1
@@ -110,13 +110,13 @@ jobs:
         run: |
           echo "=============================="
           echo "🚀 Application Deployed!"
-          echo "URL: http://${{ needs.terraform.outputs.alb_dns }}"
+          echo "URL: http://${{ needs.terraform.outputs.alb_dns_name }}"
           echo "ALB Public IP: ${{ needs.resolve_ip.outputs.alb_ip }}"
           echo "=============================="
 
       - name: Check Application Health
         run: |
-          URL="http://${{ needs.terraform.outputs.alb_dns }}"
+          URL="http://${{ needs.terraform.outputs.alb_dns_name }}"
           echo "Checking health at: $URL"
 
           wait_time=5
@@ -126,7 +126,6 @@ jobs:
               echo "✅ Application is healthy! (HTTP 200)"
               exit 0
             fi
-
 
             echo "Status $STATUS - retrying in $wait_time seconds..."
             sleep $wait_time
