--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -7,8 +7,14 @@ on:
   workflow_dispatch:
 
 jobs:
-  docker_build_push:
+  # ==========================
+  # Stage 1: Build & Push Docker
+  # ==========================
+  build_push_container:
+    name: Build and Push Docker Image
     runs-on: ubuntu-latest
+    outputs:
+      image_tag: ${{ steps.push.outputs.image_tag }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -20,19 +26,26 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest .
+        run: |
+          docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest .
+          echo "image_tag=${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest" >> $GITHUB_OUTPUT
 
       - name: Push Docker Image
+        id: push
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager:latest
 
+  # ==========================
+  # Stage 2: Terraform
+  # ==========================
   terraform:
     name: Deploy Infrastructure (Terraform)
     runs-on: ubuntu-latest
-    needs: docker_build_push
+    needs: build_push_container
     defaults:
       run:
         working-directory: terraform/
-
+    outputs:
+      alb_dns_name: ${{ steps.alb_output.outputs.alb_dns_name }}
     steps:
       - name: Checkout Code
         uses: actions/checkout@v4
@@ -54,11 +67,9 @@ jobs:
         run: terraform init -input=false -no-color
 
       - name: Terraform Plan
-        id: plan
         run: terraform plan -out=tfplan -input=false -no-color
 
       - name: Terraform Apply
-        id: apply
         run: terraform apply -input=false -auto-approve -no-color tfplan
 
       - name: Output ALB DNS
@@ -72,53 +83,68 @@ jobs:
           echo "alb_dns_name=$alb_dns_name" >> "$GITHUB_OUTPUT"
           echo "ALB DNS: $alb_dns_name"
 
-  resolve_ip:
-    name: Resolve ALB Public IP
+  # ==========================
+  # Stage 3: Ansible
+  # ==========================
+  ansible:
+    name: Configure Systems with Ansible
     runs-on: ubuntu-latest
     needs: terraform
     steps:
-      - name: Resolve ALB IP
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Ansible
         run: |
-          ALB_DNS=${{ needs.terraform.outputs.alb_dns_name }}
-          if [ -z "$ALB_DNS" ]; then
-            echo "ERROR: ALB DNS is empty, skipping resolve"
-            exit 1
-          fi
+          sudo apt-get update
+          sudo apt-get install -y ansible
 
-          HOST=$(echo "$ALB_DNS" | sed -E 's~https?://~~; s~/$~~')
-          echo "Waiting for ALB DNS to be ready..."
+      - name: Run Ansible Playbook
+        run: |
+          ansible-playbook ansible/playbook.yml -i ansible/inventory.ini \
+            --extra-vars "alb_dns_name=${{ needs.terraform.outputs.alb_dns_name }}"
 
-          for i in {1..30}; do
-            alb_ip=$(dig +short "$HOST" | head -n 1 || true)
-            if [ -n "$alb_ip" ]; then
-              echo "alb_ip=$alb_ip" >> $GITHUB_OUTPUT
-              echo "ALB Public IP: $alb_ip"
-              exit 0
-            fi
-            echo "DNS not ready yet, retrying... ($i)"
-            sleep 10
-          done
-
-          echo "ERROR: Could not resolve ALB public IP for $HOST"
-          exit 1
-
-  notify:
-    needs: [terraform, resolve_ip]
+  # ==========================
+  # Stage 4: Helm
+  # ==========================
+  helm:
+    name: Deploy Application with Helm
     runs-on: ubuntu-latest
+    needs: ansible
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v4
+
+      - name: Setup Helm
+        run: |
+          curl https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+
+      - name: Deploy with Helm
+        run: |
+          helm upgrade --install carlot-app helm/carlot-app \
+            --set image.repository=${{ secrets.DOCKERHUB_USERNAME }}/carlot-manager \
+            --set image.tag=latest \
+            --set alb.dns=${{ needs.terraform.outputs.alb_dns_name }}
+
+  # ==========================
+  # Stage 5: Notify & Health Check
+  # ==========================
+  notify:
+    name: Notify & Health Check
+    runs-on: ubuntu-latest
+    needs: helm
     steps:
       - name: Print Deployment Info
         run: |
           echo "=============================="
           echo "🚀 Application Deployed!"
           echo "URL: http://${{ needs.terraform.outputs.alb_dns_name }}"
-          echo "ALB Public IP: ${{ needs.resolve_ip.outputs.alb_ip }}"
           echo "=============================="
 
       - name: Check Application Health
         run: |
           URL="http://${{ needs.terraform.outputs.alb_dns_name }}"
           echo "Checking health at: $URL"
-
           wait_time=5
           for i in {1..10}; do
             STATUS=$(curl -s -o /dev/null -w "%{http_code}" "$URL" || true)
@@ -126,11 +152,9 @@ jobs:
               echo "✅ Application is healthy! (HTTP 200)"
               exit 0
             fi
-
             echo "Status $STATUS - retrying in $wait_time seconds..."
             sleep $wait_time
             wait_time=$((wait_time * 2))
           done
-
           echo "❌ Application did NOT return 200 within timeout."
           exit 1
